--- a/package.json
+++ b/package.json
@@ -23,13 +23,16 @@
     "@babel/preset-typescript": "^7.10.4",
     "@types/jest": "^26.0.9",
     "babel-jest": "^26.2.2",
-    "copy-webpack-plugin": "^5.1.1",
+    "copy-webpack-plugin": "^6.1.0",
     "dotenv": "^8.2.0",
     "jest": "^26.2.2",
     "ts-loader": "^8.0.2",
     "typescript": "^3.8.3",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12"
+  },
+  "resolutions": {
+    "serialize-javascript": ">=3.1.0"
   },
   "jest": {
     "testTimeout": 10000
